HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericClassBoundNonClass/Expected.uv
//! Expected diagnostic metadata for the GenericClassBoundNonClass rejected-source specimen.

expectedDiagnostic("E-TYP-2305", "rule.14.WF-ClassPath-Err")
